<resources>
    <string name="app_name">ImagesTesting</string>

    <!-- Common system messages -->
    <string name="double_back_to_exit">Нажмите еще раз для выхода</string>
    <string name="please_wait">Пожалуйста, подождите…</string>
    <string name="security_error">Отсутствуют необходимые разрешения</string>
    <string name="unknown_error">Произошла неизвестная ошибка</string>
    <string name="server_not_available_error">Сервер временно недоступен</string>
    <string name="network_error">Отсутствует подключение к сети</string>
    <string name="not_found_error">Запись не найдена</string>
    <string name="forbidden_error">Данное действие недоступно</string>
    <string name="unauthorized_error">Необходимо авторизоваться</string>
    <string name="internal_server_error">Ошибка на сервере</string>
    <string name="bad_request_error">Некорректный запрос</string>
    <string name="message_server_unavailable">Сервер недоступен. Попробуйте запустить приложение позже.</string>
    <string name="message_technical_works">Извините, в данный момент приложение недоступно. На сервере ведутся технические работы. Попробуйте запустить приложение позже.</string>
    <string name="message_update_available">Доступно обновление приложения. Рекомендуется установить обновление.</string>
    <string name="message_update_required">Данная версия приложения устарела. Необходимо установить обновление.</string>
    <string name="close_app">Закрыть приложение</string>
    <string name="open_google_play">Перейти в Google Play</string>
    <string name="continue_without_updating">Продолжить без обновления</string>
    <string name="btn_ok">Ок</string>
    <string name="btn_back">Назад</string>
    <string name="write_on_email">Написать на почту</string>
    <string name="open_folder">Открыть папку</string>
    <string name="open_file">Открыть файл</string>
    <string name="share">Поделиться</string>
    <string name="main_screen">Основной экран</string>
    <string name="setting_desc">Настройки</string>

    <!-- App strings section -->
    <string name="add_patient">Добавить пациента</string>
    <string name="add_patient_title">Редактировать данные</string>
    <string name="lastname_hint">Фамилия <font color='#FF8585'>*</font></string>
    <string name="name_hint">Имя</string>
    <string name="birthdate_hint">Дата рождения</string>
    <string name="middlename_hint">Отчество</string>
    <string name="back">Отмена</string>
    <string name="cancel">Отмена</string>
    <string name="delete_patient_dialog_title">Удалить все данные пациента?</string>
    <string name="required_field_error">*Обязательное поле</string>
    <string name="date_error">*Некорректная дата</string>
    <string name="edit_patient">Изменить данные</string>
    <string name="testing_btn">Тестирование</string>
    <string name="active_imagering">Активное картирование</string>
    <string name="passive_imagering">Пассивное картирование</string>
    <string name="results">Результаты</string>
    <string name="patient_screen">Экран пациента</string>
    <string name="testing">Тестирование</string>
    <string name="object_select">Выбор объектов</string>
    <string name="actions_select">Выбор действий</string>
    <string name="confirm">Подтвердить выбор</string>
    <string name="settings_title">Настройки</string>
    <string name="randomize_images_switch">Перемешать картинки при показе</string>
    <string name="play_sound_switch">Звуковой сигнал между картинками</string>
    <string name="main_image_duration_hint">Время показа картинки(сек.)</string>
    <string name="wait_duration_hint">Время между картинками(сек.)</string>
    <string name="save_settings">Сохранить настройки</string>
    <string name="type_select">Выбор типа</string>
    <string name="objects">Объекты</string>
    <string name="actions">Действия</string>
    <string name="start">Начать тест</string>
    <string name="continue_btn">Продолжить</string>
    <string name="stop">Остановить тест</string>


</resources>