<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        app:elevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Surface"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_back"
            app:navigationIconTint="@color/appPrimary">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/settings_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/randomizeImagesSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/baseline_grid"
        android:drawablePadding="@dimen/baseline_grid"
        android:paddingStart="@dimen/baseline_grid"
        android:paddingEnd="@dimen/baseline_grid"
        android:text="@string/randomize_images_switch"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        tools:checked="true" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/playSoundSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/baseline_grid"
        android:drawablePadding="@dimen/baseline_grid"
        android:paddingStart="@dimen/baseline_grid"
        android:paddingEnd="@dimen/baseline_grid"
        android:text="@string/play_sound_switch"
        android:textAppearance="?attr/textAppearanceBodyLarge"
        app:layout_constraintTop_toBottomOf="@id/randomizeImagesSwitch"
        tools:checked="true" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mainImageDurationInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/baseline_grid_tiny"
        android:hint="@string/main_image_duration_hint"
        app:boxStrokeWidth="2dp"
        app:boxStrokeWidthFocused="2dp"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playSoundSwitch"
        tools:ignore="HardcodedText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mainImageDurationInputView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:nextFocusDown="@id/waitDurationInputView"
            android:padding="@dimen/baseline_grid" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/waitDurationInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/baseline_grid_tiny"
        android:hint="@string/wait_duration_hint"
        app:boxStrokeWidth="2dp"
        app:boxStrokeWidthFocused="2dp"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainImageDurationInputLayout"
        tools:ignore="HardcodedText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/waitDurationInputView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:nextFocusDown="@id/saveButton"
            android:padding="@dimen/baseline_grid" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/baseline_grid_small"
        android:layout_marginVertical="@dimen/baseline_grid"
        android:text="@string/save_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/waitDurationInputLayout"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>