<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        app:elevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Surface"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIconTint="@color/appPrimary"
            app:navigationIcon="@drawable/ic_back">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/patient_screen"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/edit_icon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:contentDescription="@string/setting_desc"
                android:paddingStart="16dp"
                android:paddingEnd="17dp"
                app:srcCompat="@drawable/ic_baseline_edit_note_24" />
        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/lastNameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/baseline_grid"
        android:layout_marginTop="@dimen/baseline_grid_big"
        android:layout_marginBottom="@dimen/baseline_grid"
        android:textSize="@dimen/text_headline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        tools:text="Test" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/nameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/baseline_grid"
        android:layout_marginTop="@dimen/baseline_grid"
        android:layout_marginBottom="@dimen/baseline_grid"
        android:textSize="@dimen/text_headline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lastNameText"
        tools:text="Test" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/middleNameText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/baseline_grid"
        android:layout_marginTop="@dimen/baseline_grid"
        android:layout_marginBottom="@dimen/baseline_grid"
        android:textSize="@dimen/text_headline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameText"
        tools:text="Test" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/birthDateText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/baseline_grid"
        android:layout_marginTop="@dimen/baseline_grid"
        android:layout_marginBottom="@dimen/baseline_grid"
        android:textSize="@dimen/text_headline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/middleNameText"
        tools:text="Test" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/testingButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/baseline_grid_small"
        android:layout_marginVertical="@dimen/baseline_grid"
        android:text="@string/testing_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/birthDateText"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/activeImageringButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/baseline_grid_small"
        android:layout_marginVertical="@dimen/baseline_grid"
        android:text="@string/active_imagering"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/testingButton"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/passiveImageringButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/baseline_grid_small"
        android:layout_marginVertical="@dimen/baseline_grid"
        android:text="@string/passive_imagering"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activeImageringButton"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/resultsButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/baseline_grid_small"
        android:layout_marginVertical="@dimen/baseline_grid"
        android:text="@string/results"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passiveImageringButton"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>