<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/addPatientTitle"
        style="@style/AppTheme.Text.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:paddingVertical="@dimen/baseline_grid"
        android:text="@string/add_patient_title"
        android:textColor="?attr/colorOnSurface"
        android:textSize="@dimen/text_headline"
        app:layout_constraintEnd_toStartOf="@id/deleteButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        style="@style/ShapeAppearanceOverlay.Material3.FloatingActionButton"
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:iconPadding="0dp"
        android:visibility="gone"
        android:layout_marginHorizontal="@dimen/baseline_grid_small"
        android:layout_marginVertical="@dimen/baseline_grid"
        app:iconGravity="textStart"
        app:icon="@drawable/ic_baseline_delete_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/addPatientTitle"
        app:layout_constraintTop_toTopOf="@id/addPatientTitle"
        app:layout_constraintBottom_toBottomOf="@id/addPatientTitle"
        app:layout_constraintVertical_bias="1.0" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastnameInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/baseline_grid_big"
        android:hint="@string/lastname_hint"
        app:boxStrokeWidth="2dp"
        app:boxStrokeWidthFocused="2dp"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/addPatientTitle"
        tools:ignore="HardcodedText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastnameInputView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:nextFocusDown="@id/firstnameInputView"
            android:padding="@dimen/baseline_grid" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/firstnameInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/baseline_grid_tiny"
        android:hint="@string/name_hint"
        app:boxStrokeWidth="2dp"
        app:boxStrokeWidthFocused="2dp"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/lastnameInputLayout"
        tools:ignore="HardcodedText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstnameInputView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:nextFocusDown="@id/middlenameInputView"
            android:padding="@dimen/baseline_grid" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/middlenameInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/baseline_grid_tiny"
        android:hint="@string/middlename_hint"
        app:boxStrokeWidth="2dp"
        app:boxStrokeWidthFocused="2dp"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/firstnameInputLayout"
        tools:ignore="HardcodedText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/middlenameInputView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:nextFocusDown="@id/birthDateInputView"
            android:padding="@dimen/baseline_grid" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/birthDateInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/baseline_grid_tiny"
        android:hint="@string/birthdate_hint"
        app:boxStrokeWidth="2dp"
        app:boxStrokeWidthFocused="2dp"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:hintEnabled="true"
        app:layout_constraintEnd_toEndOf="@id/guideEnd"
        app:layout_constraintStart_toStartOf="@id/guideStart"
        app:layout_constraintTop_toBottomOf="@id/middlenameInputLayout"
        tools:ignore="HardcodedText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/birthDateInputView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:imeOptions="actionNext"
            android:inputType="date"
            android:nextFocusDown="@id/saveButton"
            android:padding="@dimen/baseline_grid" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/baseline_grid_small"
        android:layout_marginVertical="@dimen/baseline_grid"
        android:text="@string/add_patient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/birthDateInputLayout"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/backButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/baseline_grid_small"
        android:layout_marginVertical="@dimen/baseline_grid"
        android:text="@string/back"
        android:backgroundTint="@color/appSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/saveButton"
        app:layout_constraintVertical_bias="1.0" />



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/baseline_grid" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/baseline_grid" />

</androidx.constraintlayout.widget.ConstraintLayout>